--- a/consultas.ipynb
+++ b/consultas.ipynb
@@ -29,88 +29,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "73dff14d-5a8e-4f1a-9bc4-1b38330997e0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_companhia_aerea</th>\n",
-       "      <th>nome_companhia</th>\n",
-       "      <th>regra_tarifaria</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>LATAM AIRLINES BRASIL</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>GOL Linhas Aéreas Inteligentes</td>\n",
-       "      <td>https://www.voegol.com.br/pt/informacoes/tarifas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>AZUL LINHAS AÉREAS BRASILEIRA</td>\n",
-       "      <td>https://www.voeazul.com.br/para-sua-viagem/inf...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id_companhia_aerea                  nome_companhia  \\\n",
-       "0                   1           LATAM AIRLINES BRASIL   \n",
-       "1                   2  GOL Linhas Aéreas Inteligentes   \n",
-       "2                   3   AZUL LINHAS AÉREAS BRASILEIRA   \n",
-       "\n",
-       "                                     regra_tarifaria  \n",
-       "0                                               None  \n",
-       "1   https://www.voegol.com.br/pt/informacoes/tarifas  \n",
-       "2  https://www.voeazul.com.br/para-sua-viagem/inf...  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "query = \"\"\"\n",
-    "            SELECT * \n",
-    "            FROM companhia_aerea\n",
-    "        \"\"\"\n",
-    "\n",
-    "df = pd.read_sql_query(query, connection)\n",
-    "df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8dffc12c-bea0-48f7-b0a3-5f6a9fd65b26",
    "metadata": {},
@@ -120,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "91d285aa-8cd2-4da6-9f7a-5b1e989f2721",
    "metadata": {},
    "outputs": [
@@ -169,7 +87,7 @@
        "0        5847.14  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "15183e2e",
    "metadata": {},
    "outputs": [
@@ -276,7 +194,7 @@
        "5        16      Boeing 787-9"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,21 +245,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id_companhia_aerea</th>\n",
+       "      <th>nome_companhia</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
+       "      <td>GOL Linhas Aéreas Inteligentes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id_companhia_aerea\n",
-       "0                   2"
+       "                   nome_companhia\n",
+       "0  GOL Linhas Aéreas Inteligentes"
       ]
      },
      "execution_count": 6,
@@ -351,8 +269,9 @@
    ],
    "source": [
     "query = \"\"\"\n",
-    "            SELECT DISTINCT id_companhia_aerea\n",
-    "            FROM companhia_aerea_aviao\n",
+    "            SELECT DISTINCT nome_companhia\n",
+    "            FROM companhia_aerea\n",
+    "            NATURAL JOIN companhia_aerea_aviao\n",
     "            WHERE id_companhia_aerea NOT IN (\n",
     "                SELECT id_companhia_aerea\n",
     "                FROM companhia_aerea_aviao\n",
@@ -804,7 +723,7 @@
    "id": "da0183db-11c0-4393-97f3-51ec1e1a8c8e",
    "metadata": {},
    "source": [
-    "## Consulta 8: Aviões ativos"
+    "## Consulta 8: Aviões ativos por modelo de avião e companhia"
    ]
   },
   {
