--- a/consultas.ipynb
+++ b/consultas.ipynb
@@ -269,9 +269,8 @@
    ],
    "source": [
     "query = \"\"\"\n",
-    "            SELECT DISTINCT nome_companhia\n",
-    "            FROM companhia_aerea\n",
-    "            NATURAL JOIN companhia_aerea_aviao\n",
+    "            SELECT DISTINCT id_companhia_aerea\n",
+    "            FROM companhia_aerea_aviao\n",
     "            WHERE id_companhia_aerea NOT IN (\n",
     "                SELECT id_companhia_aerea\n",
     "                FROM companhia_aerea_aviao\n",
